fix: spacing and size of content on homepage subtitle

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -109,8 +109,10 @@ footer {
 .subtitle {
     text-align: center;
     line-height: 1.5;
-    b {
-        font-size: 1.5rem;
+    font-size: 1.25rem;
+    .disclaimer {
+        font-style: normal;
+        font-size: 1rem;
     }
 }
 
